--- a/index.html
+++ b/index.html
@@ -159,6 +159,19 @@
                             <p>Conducted by Music Director Michael Ibrahim</p>
                             <p>Through creative programming and inspiring artistry of the National Arab Orchestra and Maestro Michael Ibrahim, the beauty and thrills of live music will challenge your senses.</p>
                         </article>
+                        <table>
+                            <tr>
+                                <td style="margin-right: 20px">
+                                    <button type="button">SEASON TICKETS</button>
+                                </td>
+                                <td style="margin-right: 20px">
+                                    <button type="button">PERFORMANCES</button>
+                                </td>
+                                <td>
+                                    <button type="button">SUPPORT NAO</button>
+                                </td>
+                            </tr>
+                        </table>
                     </td>
                     <td style="width:30%">
                         <img src="images/feelthemusic.JPG" style="width:400px; height:200px">
