fixed about us page
fixed about us page

--- a/src/NAO_Aboutus.html
+++ b/src/NAO_Aboutus.html
@@ -129,7 +129,7 @@
         </table>
     </nav>
 
-    <div style="margin: auto; width: 80%;padding: 10px;">
+    <div class="container">
         <div id="main-content">
             <article id="post-151440" class="post-151440 page type-page status-publish hentry">
                 <img src="../images/Banner_History.jpg" style="width:100%; height: 400px;">
