--- a/src/NAO_Memberships.html
+++ b/src/NAO_Memberships.html
@@ -107,7 +107,7 @@
                                                     <li class="nav-item" style="padding-right: 15px">
                                                         <a class="nav-link" href="#">EDUCATION</a>
                                                     </li>
-                                                    <li class="nav-item dropdown" style="padding-right: 15px">
+                                                    <li class="nav-item dropdown active" style="padding-right: 15px">
                                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false">
@@ -122,7 +122,7 @@
                                                                 Partners</a>
                                                         </div>
                                                     </li>
-                                                    <li class="nav-item active" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px">
                                                         <a class="nav-link" href="NAO_Aboutus.html">ABOUT US</a>
                                                     </li>
                                                     <li>
@@ -145,62 +145,45 @@
     </nav>
 
     <div class="container">
-        <div id="main-content">
-            <article id="post-151440" class="post-151440 page type-page status-publish hentry">
-                <img src="../images/Banner_History.jpg" style="width:100%; height: 400px;">
-                <div class="et_pb_text_inner">
-                    <article>
-                        <a href="https://youtu.be/_THfBUB5VEo" target="_blank">
-                            <h3><u>Our First Performance</u></h3>
-                        </a>
-                    </article>
-                    <p>The National Arab Orchestra (hereinafter “NAO”) began in 2009 as a
-                        student ensemble at the University of Michigan under the direction
-                        of Michael Ibrahim.&nbsp;&nbsp;Following the first concert, the
-                        ensemble doubled in size to become an orchestra and began
-                        rehearsing for its next concert on January 28, 2010 at Britton
-                        Recital Hall.&nbsp;&nbsp;The success of the past two concerts led
-                        Michael to establish the orchestra’s nonprofit entity under the
-                        name, Michigan Arab Orchestra in the spring of
-                        2010.&nbsp;&nbsp;Under the leadership of its founder and music
-                        director, the orchestra established a second chamber group
-                        (the&nbsp;<i>takht</i>&nbsp;ensemble) which had its first
-                        performance in December of 2010.&nbsp;&nbsp;With its continued
-                        expansion, the organization began to gain the support of its
-                        community which included the addition of the orchestra’s
-                        co-founders, Usama Baalbaki, Moose Scheib, and Dr. Vasken
-                        Artinian.&nbsp;&nbsp;Within the next three years the Michigan Arab
-                        Orchestra quickly established itself as the Nation’s leading
-                        organization for Arab music, which led the orchestra to its home at
-                        the Detroit Music Hall Center for the Performing Arts in 2012 and
-                        culminating in the orchestra’s first major grant from the Knight
-                        Foundation in 2013.&nbsp;&nbsp;From there the Michigan Arab
-                        Orchestra began its Building Bridges Through Music (BBTM) program,
-                        which began in the Detroit Public School System. The BBTM program
-                        was&nbsp;designed to teach students about the beauty and richness
-                        of the Arab culture while providing opportunities for cultural
-                        understanding and enrichment.&nbsp;&nbsp;On January 26, 2014, the
-                        National Arab Orchestra made its national debut at the Woodruff
-                        Arts Center (Atlanta Symphony Hall).&nbsp;&nbsp;Since then, the
-                        orchestra began collaborating on a string of
-                        projects&nbsp;which&nbsp;&nbsp;have&nbsp;&nbsp;included: the Haflah
-                        concert with the Michigan Philharmonic premiering an original score
-                        by Grammy nominated composer Kareem Roustom, the &nbsp;MidEast x
-                        MidWest concert with the Toledo Symphony Orchestra which sold out a
-                        few days after the 2016 election bringing the Toledo community
-                        closer together, the East Meets West Hip Hop Fusion Project which
-                        is effectively integrating Arab music into Western culture, and
-                        most recently, a commission of newly composed music performed live
-                        to the silent films of Mohamed Bayoumi in collaboration with the
-                        Arab American National Museum, the Detroit Institute of Arts, and
-                        the National Performance Network; exposing the music and culture to
-                        an entirely different audience.&nbsp;&nbsp;The NAO continues its
-                        mission to preserve and integrate Arab culture by creating
-                        memorable musical experiences through education and performance
-                        with an emphasis on the musical traditions of the Arab world.</p>
-                </div>
-            </article> <!-- .et_pb_post -->
-        </div> <!-- #main-content -->
+        <img src="../images/Header.jpg" alt="NAO membership header" style="width:100%; height: 250px;">
+
+        <div class="vertical-menu">
+            <a href="#" class="active"><b>Membership & Donor Resources</b></a>
+            <a href="#"><b>Subscriber </b></a>
+            <a href="#"><b>Supporter</b></a>
+            <a href="#"><b>Friend </b></a>
+            <a href="#"><b>Oud Chair </b></a>
+            <a href="#"><b>Qanum Chair </b></a>
+            <a href="#"><b>Principal Players</b></a>
+            <a href="#"><b>Concert Master </b></a>
+            <a href="#"><b>Maestro's Podium </b></a>
+            <a href="#"><b>Executive Chair </b></a>
+            <a href="#"><b>Chairman's Circle </b></a>
+            <a href="#"><b>Founders Society </b></a>
+        </div>
+
+        <div class="container ">
+            <h1> Membership & Donor Resources</h1>
+            <img src="../images/NAOperforming.jpg" alt="NAO Team" style="width:70%; height: 300px;">
+
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary">$50</button>
+                <button type="button" class="btn btn-secondary">$125</button>
+                <button type="button" class="btn btn-secondary">$275</button>
+                <button type="button" class="btn btn-secondary">$525</button>
+                <button type="button" class="btn btn-secondary">$775</button>
+                <button type="button" class="btn btn-secondary">$1,000</button>
+                <button type="button" class="btn btn-secondary">$1,500</button>
+                <button type="button" class="btn btn-secondary">$2,500</button>
+                <button type="button" class="btn btn-secondary">$5,000</button>
+                <button type="button" class="btn btn-secondary">$10,000</button>
+            </div>
+        </div>
+
+        <p> --- Levels should appear hear when clicked on side menu --- </p>
+
+
+        <button type="button" class="btn">Select this level</button>
     </div>
 </body>
 
