education, plan visit pages and other fixes
education, plan visit pages and other fixes

--- a/index.html
+++ b/index.html
@@ -102,20 +102,24 @@
                                                         <a class="nav-link" href="#">CONCERTS & TICKETS</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px">
-                                                        <a class="nav-link" href="#">PLAN YOUR VISIT</a>
+                                                        <a class="nav-link" href="src/NAO_PlanVisit.html">PLAN YOUR VISIT</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px">
-                                                        <a class="nav-link" href="#">EDUCATION</a>
+                                                        <a class="nav-link" href="src/NAO_Education.html">EDUCATION</a>
                                                     </li>
                                                     <li class="nav-item dropdown" style="padding-right: 15px">
-                                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                                            role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                            aria-expanded="false">
                                                             SUPPORT
-                                                        </a>                                                        
+                                                        </a>
                                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                            <a class="dropdown-item" href="src/NAO_Memberships.html">Membership & Donor
+                                                            <a class="dropdown-item" href="src/NAO_Memberships.html">Membership
+                                                                & Donor
                                                                 Resources</a>
                                                             <a class="dropdown-item" href="#">Volunteer</a>
-                                                            <a class="dropdown-item" href="#">Corporate & Foundation Partners</a>
+                                                            <a class="dropdown-item" href="#">Corporate & Foundation
+                                                                Partners</a>
                                                         </div>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px">
@@ -154,16 +158,22 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/Banner_AboutUs.jpg" alt="NAO Team" style="width:100%; height: 400px;">
+                    <a href="src/NAO_Aboutus.html">
+                        <img src="images/Banner_AboutUs.jpg" alt="NAO Team" style="width:100%; height: 400px;">
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/Banner_Education.jpg" alt="Support NAO" style="width:100%; height: 400px;">
+                    <a href="src/NAO_Education.html">
+                        <img src="images/Banner_Education.jpg" alt="Support NAO" style="width:100%; height: 400px;">
+                    </a>
                 </div>
                 <div class="carousel-item">
                     <img src="images/Banner_Concert+Tickets.jpg" alt="NAO Team" style="width:100%; height: 400px;">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/Banner_Support.jpg" alt="Support NAO" style="width:100%; height: 400px;">
+                    <a href="src/NAO_Memberships.html">
+                        <img src="images/Banner_Support.jpg" alt="Support NAO" style="width:100%; height: 400px;">
+                    </a>
                 </div>
             </div>
 
@@ -193,7 +203,7 @@
                                 Maestro Michael Ibrahim, the beauty and thrills of live music will challenge your
                                 senses.</p>
                         </article>
-                        <table>
+                        <!-- <table>
                             <tr>
                                 <td style="margin-right: 20px">
                                     <button type="button">SEASON TICKETS</button>
@@ -205,7 +215,7 @@
                                     <button type="button">SUPPORT NAO</button>
                                 </td>
                             </tr>
-                        </table>
+                        </table> -->
                     </td>
                     <td style="width:30%">
                         <img src="images/feelthemusic.JPG" style="width:400px; height:200px">
