--- a/src/NAO_Aboutus.html
+++ b/src/NAO_Aboutus.html
@@ -102,10 +102,10 @@
                                                         <a class="nav-link" href="#">CONCERTS & TICKETS</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px">
-                                                        <a class="nav-link" href="#">PLAN YOUR VISIT</a>
+                                                        <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px">
-                                                        <a class="nav-link" href="#">EDUCATION</a>
+                                                        <a class="nav-link" href="NAO_Education.html">EDUCATION</a>
                                                     </li>
                                                     <li class="nav-item dropdown" style="padding-right: 15px">
                                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
