--- a/src/NAO_PlanVisit.html
+++ b/src/NAO_PlanVisit.html
@@ -101,13 +101,13 @@
                                                     <li class="nav-item" style="padding-right: 15px">
                                                         <a class="nav-link" href="#">CONCERTS & TICKETS</a>
                                                     </li>
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item active" style="padding-right: 15px">
                                                         <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px">
                                                         <a class="nav-link" href="NAO_Education.html">EDUCATION</a>
                                                     </li>
-                                                    <li class="nav-item dropdown active" style="padding-right: 15px">
+                                                    <li class="nav-item dropdown" style="padding-right: 15px">
                                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false">
@@ -145,45 +145,9 @@
     </nav>
 
     <div class="container">
-        <img src="../images/Header.jpg" alt="NAO membership header" style="width:100%; height: 250px;">
-
-        <div class="vertical-menu">
-            <a href="#" class="active"><b>Membership & Donor Resources</b></a>
-            <a href="#"><b>Subscriber </b></a>
-            <a href="#"><b>Supporter</b></a>
-            <a href="#"><b>Friend </b></a>
-            <a href="#"><b>Oud Chair </b></a>
-            <a href="#"><b>Qanum Chair </b></a>
-            <a href="#"><b>Principal Players</b></a>
-            <a href="#"><b>Concert Master </b></a>
-            <a href="#"><b>Maestro's Podium </b></a>
-            <a href="#"><b>Executive Chair </b></a>
-            <a href="#"><b>Chairman's Circle </b></a>
-            <a href="#"><b>Founders Society </b></a>
-        </div>
-
-        <div class="container ">
-            <h1> Membership & Donor Resources</h1>
-            <img src="../images/NAOperforming.jpg" alt="NAO Team" style="width:70%; height: 300px;">
-
-            <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-secondary">$50</button>
-                <button type="button" class="btn btn-secondary">$125</button>
-                <button type="button" class="btn btn-secondary">$275</button>
-                <button type="button" class="btn btn-secondary">$525</button>
-                <button type="button" class="btn btn-secondary">$775</button>
-                <button type="button" class="btn btn-secondary">$1,000</button>
-                <button type="button" class="btn btn-secondary">$1,500</button>
-                <button type="button" class="btn btn-secondary">$2,500</button>
-                <button type="button" class="btn btn-secondary">$5,000</button>
-                <button type="button" class="btn btn-secondary">$10,000</button>
-            </div>
-        </div>
-
-        <p> --- Levels should appear hear when clicked on side menu --- </p>
-
-
-        <button type="button" class="btn">Select this level</button>
+        <article>
+            Coming soon...
+        </article>
     </div>
 </body>
 
