--- a/src/NAO_PlanVisit.html
+++ b/src/NAO_PlanVisit.html
@@ -99,7 +99,7 @@
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                                                 <ul class="navbar-nav">
                                                     <li class="nav-item" style="padding-right: 15px">
-                                                        <a class="nav-link" href="#">CONCERTS & TICKETS</a>
+                                                        <a class="nav-link" href="NAO_Concerts.html">CONCERTS & TICKETS</a>
                                                     </li>
                                                     <li class="nav-item active" style="padding-right: 15px">
                                                         <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
