--- a/src/NAO_Concerts.html
+++ b/src/NAO_Concerts.html
@@ -126,9 +126,23 @@
                                                         <a class="nav-link" href="NAO_Aboutus.html">ABOUT US</a>
                                                     </li>
                                                     <li>
-                                                        <button class="btn btn-outline-secondary" type="button" style="border:none">
-                                                            <i class="fas fa-search"></i>
-                                                        </button>
+                                                        <div>
+                                                            <script>
+                                                                (function () {
+                                                                    var cx = '009306133951131515060:3n44ifw4hyu';
+                                                                    var gcse = document.createElement('script');
+                                                                    gcse.type = 'text/javascript';
+                                                                    gcse.async = true;
+                                                                    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                                                                    var s = document.getElementsByTagName('script')[0];
+                                                                    s.parentNode.insertBefore(gcse, s);
+                                                                })();
+                                                            </script>
+                                                            <gcse:search></gcse:search>
+                                                        </div>
+                                                        <!-- <button class="btn btn-outline-secondary" type="button" style="border:none">
+                                                                                                                    <i class="fas fa-search"></i>
+                                                                                                                </button> -->
                                                     </li>
                                                 </ul>
                                             </div>
