aligned top menu bar items
aligned top menu bar items

--- a/src/NAO_Education.html
+++ b/src/NAO_Education.html
@@ -98,16 +98,16 @@
                                         <td>
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                                                 <ul class="navbar-nav">
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_Concerts.html">CONCERTS & TICKETS</a>
                                                     </li>
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
                                                     </li>
-                                                    <li class="nav-item active" style="padding-right: 15px">
+                                                    <li class="nav-item active" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_Education.html">EDUCATION</a>
                                                     </li>
-                                                    <li class="nav-item dropdown" style="padding-right: 15px">
+                                                    <li class="nav-item dropdown" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false">
@@ -122,7 +122,7 @@
                                                                 Partners</a>
                                                         </div>
                                                     </li>
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_Aboutus.html">ABOUT US</a>
                                                     </li>
                                                     <li>
@@ -159,25 +159,49 @@
     </nav>
 
     <div class="container">
-        <img src="../images/Banner_Education.jpg"  alt="NAO Education" style="width:100%; height: 250px;">
+        <img src="../images/Banner_Education.jpg" alt="NAO Education" style="width:100%; height: 250px;">
 
         <article>
             <h3><u>Education lies at the core of the NAO’s mission</u></h3>
-            <p>In order to better understand the relationships and differences between Arab and Western music, an individual must have working knowledge of Arab music. In doing so, one will have the necessary knowledge needed to understand what happens in a performance of Arab music. Given the complex and diverse nature of Arab music, we will be taking somewhat of a “crash course” to provide enough information that will allow the listener to understand the concepts behind Arab music. Hasan Habib Touma, an ethnomusicologist and author of the book, The Music of the Arabs, has described Arab music in five separate components</p>
+            <p>In order to better understand the relationships and differences between Arab and Western music, an
+                individual must have working knowledge of Arab music. In doing so, one will have the necessary
+                knowledge needed to understand what happens in a performance of Arab music. Given the complex and
+                diverse nature of Arab music, we will be taking somewhat of a “crash course” to provide enough
+                information that will allow the listener to understand the concepts behind Arab music. Hasan Habib
+                Touma, an ethnomusicologist and author of the book, The Music of the Arabs, has described Arab music in
+                five separate components</p>
         </article>
 
         <table>
             <tr>
                 <td style="width:50%">
-                    <img src="../images/Image_Education.jpg" alt="Education" style="width:100%; height: 80%" > 
+                    <img src="../images/Image_Education.jpg" alt="Education" style="width:100%; height: 80%">
                 </td>
                 <td style="width:50%">
                     <ul>
-                        <li>A tone system with specific intervallic structures. This is called a maqam system. To find out more about the maqam system Link <a href="http://www.maqamworld.com/" target="_blank">coming soon</a></li>
-                        <li>Rhythmic-temporal structures (rhythmic cycles) that produce a rich variety of rhythmic patterns, used to accompany the metered vocal and instrumental and give them form. To find out more about various rhythmic cycles in Arab music Link <a href="http://www.maqamworld.com/rhythms.html" target="_blank">coming soon</a></li>
-                        <li>Musical instruments that are found throughout the Arabian world and that represent a standardized tone system, are played with standardized performance techniques and exhibit similar details in construction and design. <a href="https://www.youtube.com/watch?v=IYFNCOcKtug" target="_blank">Click Here</a> for a recording example of a Takht ensemble where you can find different types of Arab instruments.</li>
-                        <li>Specific social contexts for the making of music, whereby musical genres can be classified as urban (music of the city inhabitants), or Bedouin (music of the desert inhabitants). By way of example, consider the Bedouin, by virtue of mass media, can listen to any kind of music in his desert tent but who would never make music himself outside of a specific context. Click the links for various styles of Arab music: music of <a href="https://www.youtube.com/watch?v=6OsxWD7oltE" target="_blank">Lebanon</a> & music of <a href="https://www.youtube.com/watch?v=6OsxWD7oltE" target="_blank">Egypt</a>.</li>
-                        <li>A musical mentality that is responsible for the aesthetic homogeneity of the tonal-spatial and rhythmic-temporal structures in Arabian music, whether composed or improvised, instrumental or vocal, secular or scared. The word for this in Arabic is Tarab which is defined by Dr. Ali Jihad Racy as, the ecstatic feeling that the music produces.</li>
+                        <li>A tone system with specific intervallic structures. This is called a maqam system. To find
+                            out more about the maqam system Link <a href="http://www.maqamworld.com/" target="_blank">coming
+                                soon</a></li>
+                        <li>Rhythmic-temporal structures (rhythmic cycles) that produce a rich variety of rhythmic
+                            patterns, used to accompany the metered vocal and instrumental and give them form. To find
+                            out more about various rhythmic cycles in Arab music Link <a href="http://www.maqamworld.com/rhythms.html"
+                                target="_blank">coming soon</a></li>
+                        <li>Musical instruments that are found throughout the Arabian world and that represent a
+                            standardized tone system, are played with standardized performance techniques and exhibit
+                            similar details in construction and design. <a href="https://www.youtube.com/watch?v=IYFNCOcKtug"
+                                target="_blank">Click Here</a> for a recording example of a Takht ensemble where you
+                            can find different types of Arab instruments.</li>
+                        <li>Specific social contexts for the making of music, whereby musical genres can be classified
+                            as urban (music of the city inhabitants), or Bedouin (music of the desert inhabitants). By
+                            way of example, consider the Bedouin, by virtue of mass media, can listen to any kind of
+                            music in his desert tent but who would never make music himself outside of a specific
+                            context. Click the links for various styles of Arab music: music of <a href="https://www.youtube.com/watch?v=6OsxWD7oltE"
+                                target="_blank">Lebanon</a> & music of <a href="https://www.youtube.com/watch?v=6OsxWD7oltE"
+                                target="_blank">Egypt</a>.</li>
+                        <li>A musical mentality that is responsible for the aesthetic homogeneity of the tonal-spatial
+                            and rhythmic-temporal structures in Arabian music, whether composed or improvised,
+                            instrumental or vocal, secular or scared. The word for this in Arabic is Tarab which is
+                            defined by Dr. Ali Jihad Racy as, the ecstatic feeling that the music produces.</li>
                     </ul>
                 </td>
             </tr>
