--- a/index.html
+++ b/index.html
@@ -98,16 +98,18 @@
                                         <td>
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                                                 <ul class="navbar-nav">
-                                                    <li class="nav-item" style="padding-right: 15px">
-                                                        <a class="nav-link" href="src/NAO_Concerts.html">CONCERTS & TICKETS</a>
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
+                                                        <a class="nav-link" href="src/NAO_Concerts.html">CONCERTS &
+                                                            TICKETS</a>
                                                     </li>
-                                                    <li class="nav-item" style="padding-right: 15px">
-                                                        <a class="nav-link" href="src/NAO_PlanVisit.html">PLAN YOUR VISIT</a>
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
+                                                        <a class="nav-link" href="src/NAO_PlanVisit.html">PLAN YOUR
+                                                            VISIT</a>
                                                     </li>
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="src/NAO_Education.html">EDUCATION</a>
                                                     </li>
-                                                    <li class="nav-item dropdown" style="padding-right: 15px">
+                                                    <li class="nav-item dropdown" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false">
@@ -122,7 +124,7 @@
                                                                 Partners</a>
                                                         </div>
                                                     </li>
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="src/NAO_Aboutus.html">ABOUT US</a>
                                                     </li>
                                                     <li>
