--- a/src/NAO_Memberships.html
+++ b/src/NAO_Memberships.html
@@ -98,16 +98,16 @@
                                         <td>
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                                                 <ul class="navbar-nav">
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_Concerts.html">CONCERTS & TICKETS</a>
                                                     </li>
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
                                                     </li>
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_Education.html">EDUCATION</a>
                                                     </li>
-                                                    <li class="nav-item dropdown active" style="padding-right: 15px">
+                                                    <li class="nav-item dropdown active" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false">
@@ -122,7 +122,7 @@
                                                                 Partners</a>
                                                         </div>
                                                     </li>
-                                                    <li class="nav-item" style="padding-right: 15px">
+                                                    <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_Aboutus.html">ABOUT US</a>
                                                     </li>
                                                     <li>
