--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/Banner_Concert+Tickets.jpg" alt="NAO Team" style="width:100%; height: 400px;">
+                    <a href="src/NAO_Concerts.html">
+                        <img src="images/Banner_Concert+Tickets.jpg" alt="NAO Team" style="width:100%; height: 400px;">
+                    </a>
                 </div>
                 <div class="carousel-item">
                     <a href="src/NAO_Memberships.html">
