--- a/src/NAO_Aboutus.html
+++ b/src/NAO_Aboutus.html
@@ -110,7 +110,7 @@
                                                         <a class="nav-link" href="NAO_Concerts.html">CONCERTS & TICKETS</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
-                                                        <a class="nav-link" href="#">PLAN YOUR VISIT</a>
+                                                        <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="#">EDUCATION</a>
