fixed nav link for Education page
fixed nav link for Education page

--- a/src/NAO_Aboutus.html
+++ b/src/NAO_Aboutus.html
@@ -113,7 +113,7 @@
                                                         <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
-                                                        <a class="nav-link" href="#">EDUCATION</a>
+                                                        <a class="nav-link" href="NAO_Education.html">EDUCATION</a>
                                                     </li>
                                                     <li class="nav-item dropdown" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
